--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,36 +1,67 @@
-*{margin:0px;padding:0px;color:white;background:#235;}
-h1,h2,h4,div{text-align:center;}
-div{width:100%;}
-div#container{
+* {
+	margin: 0;
+	padding: 0;
+	color: white;
+	background: #235;
+}
+
+h1,h2,h4,div {
+	text-align: center;
+}
+
+div {
+	width: 100%;
+}
+
+#container {
 	min-width: 300px;
 	max-width: 700px;
 	margin: auto;
-	margin-top:20px;
-	margin-bottom:20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	padding: 5px;
 	padding-bottom: 10px;
 	text-align: left;
-	border:1px solid white;
+	border: 1px solid white;
 	overflow: hidden;
 }
-hr{margin-top:10px;}
-ol{margin-bottom: 4px;}
-li{margin-left:30px;}
-p{margin-bottom:4px;}
-h1{
+
+hr {
+	margin-top: 10px;
+}
+
+ol {
+	margin-bottom: 4px;
+}
+
+li {
+	margin-left: 30px;
+}
+
+p {
+	margin-bottom: 4px;
+}
+
+h1 {
 	font: 2.2em 'timeburner_regular', Arial, sans-serif;
 	margin-bottom: -10px;
 }
-h2{
+
+h2 {
 	font: 1.4em 'timeburner_regular', Arial, sans-serif;
-	margin-top:10px;
+	margin-top: 10px;
 }
-h4{
+
+h4 {
 	font-size: 0.9em;
 	margin-bottom: 13px;
 }
-a{text-decoration: none;}
-div>a{
+
+a {
+	text-decoration: none;
+}
+
+div>a {
 	display: inline-block;
 	padding-left: 3px;
 	padding-right: 3px;
